# Django-Mobile-Detector

./: .gitignore  pyproject.toml  setup.cfg
django-mobile-detect/: LICENSE  README.rst
django-mobile-detect/mobiledetect/: detection.py  tests.py  user_agent.py
mobiledetect/: constants.py  detection.py  headers.py  middleware.py
